...
    <string name="tags_label">Tags:</string>
    <string name="image_label">Image:</string>
    <string name="actions_label">Actions</string>
    <string name="view_monitoring">View Monitoring</string>
    <string name="confirm_stop">Are you sure you want to stop droplet \'%1$s\'?</string>
    <string name="confirm_reboot">Are you sure you want to reboot droplet \'%1$s\'?</string>
    <string name="privacy_policy_url">https://sites.google.com/view/droplet-manager/home</string>
    <string name="close">Close</string>
    <string name="cost_monthly_format">$%.2f/month</string>
    <string name="cost_monthly_hourly_format">$%1$.2f/month, $%2$.4f/hour</string>
    <string name="accrued_this_month">Accrued This Month</string>
    <string name="accrued_this_month_format">$%.2f</string>
    <string name="features">Features</string>
...
